--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router": "^7.9.2"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.3.2",
     "@react-router/dev": "^7.9.2",
     "@tailwindcss/vite": "^4.1.13",
     "@types/node": "^22",
